Stable version: Added the "Archive" button for job applications with the "Archived Applications" tab. Also fixed the bug with "Close Job" button and the visibility of closed jobs, as well as "Reopen" button.

--- a/app/static/dashboard.css
+++ b/app/static/dashboard.css
@@ -228,7 +228,16 @@ h4 {
     transition: all 0.3s ease;
 }
 
-.sidebar nav a:hover {
+.sidebar nav a.active {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: var(--white);
+    border-left-color: var(--primary-color);
+    text-decoration: none;
+    transform: translateX(5px);
+    font-weight: 1000;
+}
+
+.sidebar nav a:hover:not(.active) {
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--white);
     border-left-color: var(--primary-color);
